--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="ranathedev" />
+    <meta name="format-detection" content="telephone=yes" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are a Family owned Meditterranian, restaurant, focused on traditional recipes served with a modern twist"
     />
+    <meta name="og:title" content="Little Lemon" />
+    <meta
+      name="og:description"
+      content="We are a Family owned Meditterranian, restaurant, focused on traditional recipes served with a modern twist"
+    />
+    <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
