--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
       content="We are a Family owned Meditterranian, restaurant, focused on traditional recipes served with a modern twist"
     />
     <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
