--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@500;600&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Markazi+Text&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
