Created BookingDetails Table

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="ranathedev" />
     <meta name="format-detection" content="telephone=yes" />
+    <meta name="HandheldFriendly" content="true" />
     <meta
       name="description"
       content="We are a Family owned Meditterranian, restaurant, focused on traditional recipes served with a modern twist"
@@ -17,6 +18,10 @@
       content="We are a Family owned Meditterranian, restaurant, focused on traditional recipes served with a modern twist"
     />
     <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://littlelemon.com" />
+    <meta property="og:locale" content="US" />
+    <meta property="og:site_name" content="Little Lemon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -47,6 +52,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
